Fix spacing between form fields, alignment of drag handle

--- a/styles/base/_form.scss
+++ b/styles/base/_form.scss
@@ -483,3 +483,17 @@ tr .form-item {
   margin-top: var(--gin-spacing-density-s);
   margin-bottom: var(--gin-spacing-density-s);
 }
+
+.field-plugin-settings-edit-form {
+  margin-top: var(--gin-spacing-s);
+
+  .form-item {
+    margin-top: var(--gin-spacing-m);
+    margin-bottom: var(--gin-spacing-m);
+  }
+
+  .form-boolean-group .form-item {
+    margin-top: var(--gin-spacing-xs);
+    margin-bottom: var(--gin-spacing-xs);
+  }
+}
