--- a/styles/base/_tabledrag.scss
+++ b/styles/base/_tabledrag.scss
@@ -77,8 +77,33 @@
   box-shadow: inset 6px 0 0 0 var(--gin-color-warning);
 }
 
-.tabledrag-cell-content__item {
-  .checkbox-toggle:hover {
-    cursor: pointer;
+.tabledrag-leaf td,
+.tabledrag-cell {
+  vertical-align: top;
+}
+
+.tabledrag-cell {
+  padding-top: var(--gin-spacing-density-m);
+  padding-bottom: var(--gin-spacing-density-m);
+
+  &-content {
+    margin-top: var(--gin-spacing-xs);
+    margin-bottom: var(--gin-spacing-xs);
   }
+
+  &-content__item {
+    .checkbox-toggle:hover {
+      cursor: pointer;
+    }
+  }
+}
+
+.field-plugin-settings-edit-wrapper,
+.field-plugin-settings-edit-wrapper + a {
+  margin-top: var(--gin-spacing-m);
+  margin-bottom: var(--gin-spacing-m);
+}
+
+.field-plugin-settings-edit-wrapper + a {
+  margin-top: var(--gin-spacing-s);
 }
