--- a/styles/components/paragraphs.scss
+++ b/styles/components/paragraphs.scss
@@ -210,7 +210,7 @@
       min-width: 40px;
 
       &::after {
-        top: 4px;
+        top: -2px;
         left: 8px;
       }
     }
